Adding placeholder for ChartView

--- a/app/src/main/res/layout/chart_fragment.xml
+++ b/app/src/main/res/layout/chart_fragment.xml
@@ -5,11 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".ChartFragment">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="Hello"
-        android:textSize="24sp" />
+    <include layout="@layout/sample_chart_view" />
 
 </FrameLayout>
